--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "npx tsc",
     "clear": "rm -rf build/*",
     "build-app": "npm run build-ui && npm run build && cp -r server/public build/",
-    "start-app": "node build/server.js",
     "start": "node build/server.js",
     "dev": "npm run build && npm run start",
     "build-ui-one": "cd client_one && npm run build && cd ..",
@@ -23,8 +22,14 @@
     "npm": "9.5.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/cookie-parser": "^1.4.4",
     "bcrypt": "^5.1.0",
     "connect-loki": "^1.2.0",
+    "connect-redis": "^7.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
@@ -32,12 +37,14 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.11.2",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "redis": "^4.6.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -47,6 +54,7 @@
     "@types/express-session": "^1.17.7",
     "@types/express-validator": "^3.0.0",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
